Fixing surefire bug